BPER/DEVF/force-app/main/default/objects/CRM_InformazioneParticolare__c/CRM_InformazioneParticolare__c.object-meta.xml
<CustomObject>
    <label>Informazione particolare</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Informazioni particolari</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informazioni particolari</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>