BPER/DEVF/force-app/main/default/objects/CRM_InformazioneParticolare__c/fields/CRM_A__c.field-meta.xml
<CustomField>
    <fullName>CRM_A__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>A</label>
    <type>Date</type>
</CustomField>