BPER/DEVF/force-app/main/default/objects/CRM_InformazioneParticolare__c/fields/CRM_Codice__c.field-meta.xml
<CustomField>
    <fullName>CRM_Codice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>