BPER/DEVF/force-app/main/default/objects/CRM_InformazioneParticolare__c/fields/CRM_Da__c.field-meta.xml
<CustomField>
    <fullName>CRM_Da__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Da</label>
    <type>Date</type>
</CustomField>