BPER/DEVF/force-app/main/default/objects/CRM_InformazioneParticolare__c/fields/CRM_Descrizione__c.field-meta.xml
<CustomField>
    <fullName>CRM_Descrizione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrizione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>